# hello-wgpu

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  run.txt
examples/collision-detection/: Cargo.toml  README.md  index.html
examples/collision-detection/src/: controls_gui.rs  cube_settings_gui.rs  lib.rs  main.rs
examples/instancing/: Cargo.toml  README.md  index.html
examples/instancing/res/: coords.json  ferris.mtl  lightbulb_2.mtl
examples/instancing/src/: lib.rs  main.rs
src/: app.rs  camera.rs  colourful_shader.wgsl  gui.rs  instance.rs  lib.rs  light.rs  light_shader.wgsl  main.rs  mesh.rs  model.rs  object.rs  resources.rs  shader.wgsl  texture.rs  uniforms.rs  vertex.rs
src/collision/: aabb.rs  mod.rs  sphere.rs
src/debug/: line.rs  mod.rs  wireframe.rs
src/gui/: mod.rs  renderer.rs
src/gui/windows/: mod.rs  performance.rs  stats.rs
src/primitives/: cuboid.rs  mod.rs  sphere.rs
src/render_pass/: basic.rs  line.rs  mod.rs  phong.rs
src/shaders/: basic.wgsl  light_shader.wgsl  line.wgsl  phong.wgsl
